@@ -15,13 +15,14 @@ sqitchusage - Sqitch usage statement
 
 =head1 Options
 
-  -f --plan-file  FILE      Path to a deployment plan file.
-     --engine     ENGINE    Database engine.
-     --top-dir    DIR       Path to directory with plan and scripts.
+  -P --plan-file  <file>    Path to a deployment plan file.
+  -C --directory  <dir>     Change to directory before performing any actions.
+     --engine     <engine>  Database engine.
+  -D --top-dir    <dir>     Path to directory with plan and scripts.
      --etc-path             Print the path to the etc directory and exit.
      --no-pager             Do not pipe output into a pager.
      --quiet                Quiet mode with non-error output suppressed.
-  -v --verbose              Increment verbosity.
+  -V --verbose              Increment verbosity.
      --version              Print the version number and exit.
      --help                 Show a list of commands and exit.
      --man                  Print the introductory documentation and exit.
